@@ -61,6 +61,18 @@ typedef unsigned int uid_t;
 
 /****************************************************************************/
 
+#ifndef _TIME_H
+#include <time.h>
+#endif /* _TIME_H */
+
+/****************************************************************************/
+
+#ifndef _STDDEF_H
+#include <stddef.h>
+#endif /* _STDDEF_H */
+
+/****************************************************************************/
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
